2014-07-16  Carl Hetherington  <cth@carlh.net>

	* Updates to de_DE from Carsten Kurz.

	* Limit allowed KDM types based on Interop/SMPTE setting
	of DCP (#385).

	* Updates to fr_FR from Grégoire Ausina.

2014-07-14  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp to get a new version which writes
	<Hash> values to CPLs.

2014-07-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.2 released.

2014-07-10  Carl Hetherington  <cth@carlh.net>

	* Try to fix corruption of KDM email setting in
	some cases.

	* Version 1.72.1 released.

2014-07-08  Carl Hetherington  <cth@carlh.net>

	* Fix various problems with seek and content
	being trimmed when its video frame rate is
	overridden.

2014-07-02  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2014-06-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.0 released.

2014-06-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.71.2 released.

2014-06-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.71.1 released.

2014-06-28  Carl Hetherington  <cth@carlh.net>

	* Fix crash on analysing audio (and possibly DCP creation) with
	resampled content.

2014-06-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.71.0 released.

2014-06-27  Carl Hetherington  <cth@carlh.net>

	* Fix up/down buttons in content list.

2014-06-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.70.1 released.

2014-06-26  Carl Hetherington  <cth@carlh.net>

	* Support different KDM formulations.

	* Allow override of detected video frame rates.

	* Optimisation of uncertain effect to encoder and server
	thread handling.

	* Version 1.70.0 released.

2014-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.37 released.

2014-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.36 released.

2014-06-25  Carl Hetherington  <cth@carlh.net>

	* Support pixel format 46 in make_black().

2014-06-24  Carl Hetherington  <cth@carlh.net>

	* Re-assign timeline tracks when things are