@@ -186,6 +186,7 @@ Config::read ()
 	_mail_server = f.string_child ("MailServer");
 	_mail_user = f.optional_string_child("MailUser").get_value_or ("");
 	_mail_password = f.optional_string_child("MailPassword").get_value_or ("");
+	_kdm_subject = f.optional_string_child ("KDMSubject").get_value_or (_("KDM delivery"));
 	_kdm_from = f.string_child ("KDMFrom");
 	_kdm_cc = f.optional_string_child ("KDMCC").get_value_or ("");
 	_kdm_email = f.string_child ("KDMEmail");
@@ -366,6 +367,7 @@ Config::write () const
 	root->add_child("MailServer")->add_child_text (_mail_server);
 	root->add_child("MailUser")->add_child_text (_mail_user);
 	root->add_child("MailPassword")->add_child_text (_mail_password);
+	root->add_child("KDMSubject")->add_child_text (_kdm_subject);
 	root->add_child("KDMFrom")->add_child_text (_kdm_from);
 	root->add_child("KDMCC")->add_child_text (_kdm_cc);
 	root->add_child("KDMEmail")->add_child_text (_kdm_email);
